$Id: History,v 1.36 2002-06-07 14:46:23 gcosmo Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

June 7, 2001  G. Cosmo                     geommng-V04-00-07
- G4AssemblyVolume[.hh.cc]:
  o Fixed inconsistent handling of input rotation matrices by caching them
    with corresponding deallocation at destruction time.
    Comments updated accordingly with a warning about foreseen changes
    in methods' interfaces expected by next major release 5.0.
  o Correctly handle cases when pointer to rotation matrix is zero.
  o Updated unit test.

May 17, 2002  G. Cosmo                     geommng-V04-00-06
- Added ability to optionally optimise/non-optimise detector regions
  using logical volumes:
  o G4LogicalVolume:
    - Introduced additional bool argument to constructor,
      set to 'true' by default.
    - Added method IsToOptimise() with corresponding bool flag attribute.
  o G4GeometryManager:
    - Adapted BuildOptimisations() method to consider optional optimisation
      flag from G4LogicalVolume.

May 15, 2002  G. Cosmo                     geommng-V04-00-05
- G4SmartVoxelHeader:
  o Added utility method GetParamAxis() to retrieve suggested axis for
    optimisation of parametrised geometry.