@@ -21,7 +21,7 @@
 // ********************************************************************
 //
 //
-// $Id: G4AssemblyVolume.cc,v 1.9 2002-06-22 00:40:15 radoone Exp $
+// $Id: G4AssemblyVolume.cc,v 1.10 2002-06-24 07:15:27 gcosmo Exp $
 // GEANT4 tag $Name: not supported by cvs2svn $
 //
 // 
@@ -156,12 +156,11 @@ void G4AssemblyVolume::MakeImprint( G4LogicalVolume*  pMotherLV,
                                     G4RotationMatrix* pRotationInMother,
                                     G4int copyNumBase )
 {
-  // 22/06/2002 R. Chytracek
-  // The resolution of the Bugzilla Report #382
   // If needed user can specify explicitly the base count from which to start off for the generation
   // of phys. vol. copy numbers
   // The old behaviour is preserved when copyNumBase == 0, e.g. the generated copy numbers start
   // from the count equal to current number of daughter volumes before a imprint is made
+
   unsigned int        numberOfDaughters;
   
   if( copyNumBase != 0 ) {
@@ -238,12 +237,11 @@ void G4AssemblyVolume::MakeImprint( G4LogicalVolume*  pMotherLV,
                                     G4Transform3D&    transformation,
                                     G4int copyNumBase )
 {
-  // 22/06/2002 R. Chytracek
-  // The resolution of the Bugzilla Report #382
   // If needed user can specify explicitly the base count from which to start off for the generation
   // of phys. vol. copy numbers
   // The old behaviour is preserved when copyNumBase == 0, e.g. the generated copy numbers start
   // from the count equal to current number of daughter volumes before a imprint is made
+
   unsigned int        numberOfDaughters;
   
   if( copyNumBase != 0 ) {
