@@ -1,4 +1,4 @@
-$Id: History,v 1.36 2002-06-07 14:46:23 gcosmo Exp $
+$Id: History,v 1.37 2002-06-24 07:15:27 gcosmo Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -17,7 +17,13 @@ committal in the CVS repository !
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
 
-June 7, 2001  G. Cosmo                     geommng-V04-00-07
+June 24, 2002  G. Cosmo                    geommng-V04-00-08
+- G4AssemblyVolume[.hh.cc]:
+  o Moved accessors to assembly counters to public.
+  o Added support for user definable count base for generated physical volumes.
+  Fixes problem report #382.
+
+June 7, 2002  G. Cosmo                     geommng-V04-00-07
 - G4AssemblyVolume[.hh.cc]:
   o Fixed inconsistent handling of input rotation matrices by caching them
     with corresponding deallocation at destruction time.
